app/assets/stylesheets/style.css
* {
  margin: 0 auto;
  -webkit-margin-before: 0;
  -webkit-margin-after: 0;
  -webkit-margin-start: 0;
  -webkit-margin-end: 0;
  -webkit-padding-start: 0;
  box-sizing: border-box;
}

html, body {
  background-color: #F5F2E9;
  height: 100%;
  font-size: 18px;
  font-family: 'Roboto', 'Helvetica Neue', Helvetica, arial, sans-serif;
  color: #000;
  line-height: 150%;
}
h1 {
  margin: 0;
}
p {
  margin: 0;
}

a {
  color: #F5F2E9;
  text-decoration: none;
}

ul {
  margin: 0;
}
.main-container {
  min-height: 100%;
  position: relative;
}

.container {
  width: 85%;
  min-height:100%;
  margin: 0 auto;
  padding-bottom: 80px;
}

.content-container {
  max-width: 80%;
  height: 100%;
  background-color: #fff;
  margin: 2em auto;
  padding: 0;
  border-radius: 3px;
  text-align: center;
}

.help-container,
.profile-container,
.messages-container {
  max-width: 80%;
  height: 100%;
  position: relative;
  background-color: #fff;
  margin: 2em auto;
  padding: 0 0 2em 0;
  border-radius: 3px;
}

.content-container h2,
.help-container  h2,
.profile-container h2,
.messages-container h2 {
  text-align: left;
  background-color: #36B1BF;
  padding: 1em;
  margin: 0;
  text-transform: uppercase;
  color: #FFF6E5;
  border-top-left-radius: 3px;
  border-top-right-radius: 3px;
}

.content-container h3, 
.help-container h3,
.profile-container h3,
.messages-container h3 {
  text-align: left;
  margin: 1.5em 2em;
  padding-bottom: 0.5em;
  border-bottom: 2px solid #000;
  text-transform: uppercase;
}

.help-container p {
  margin: 0.5em 2.5em;
}

label {
  display: block;
  text-transform: uppercase;
  margin-top: 1em;
  font-weight: 700;
}

.credit a:hover,
.support a:hover {
  color: #F5A503;
  font-weight: 700;
  border-bottom: 1px solid #F5A503;
}

input, 
textarea {
  display: inline-block;
  width: 100%;
  background-color: #F5F2E9;
  margin: 0.1em auto;
  padding: 0.4em;
  border: 1px solid #ccc;
  border-radius: 3px;
  line-height: 150%;
}

textarea {
  height: 200px;
}

input[type="submit"] {
  width: 100%;
  background-color: #F5A503;
  border: 1px solid #F5A503;
  color: #F5F2E9;
  margin-top: 0.5em;
  padding: 0.5em;
  text-transform: uppercase;
  font-weight: 600;
}

input[type="submit"]:hover {
  background-color: #36B1BF;
  border: 1px solid #36B1BF;
  color: #F5F2E9;
}

select {
  width: 7.5em;
  margin: 0.1em auto;
  /*  margin: 5px auto;*/
  padding: 0.4em;
  border: 1px solid #ccc;
  font-size: 16px;
  line-height: 150%;
  display: inline-block;
}

.error {
  color: #F2385A;
  font-size: 16px;
  margin: 1em auto;
}

/* Header & Navigation */
header {
  max-width: 100%;
  height: 90px;
  background-color: #36B1BF;
}

.sparkr-logo {
  color: #FFF6E5;
  padding-top: 0.4em;
  padding-left: 1.5em;
}

.main-nav {
  max-width: 98%;
  padding: 0.5em;
  vertical-align: middle;
}

.nav-links-left {
  float: left;
}

.nav-links-right {
  float: right;
  padding-top: 0.2em;
  vertical-align: middle;
}

.main-nav ul {
  list-style-type: none;
  padding: 0;
}

.main-nav li {
  display: inline-block;
  margin: 20px 10px;
}

.main-nav a {
  padding-top: 10px;
  padding-left: 5px;
  color: #FFF6E5;
  text-transform: uppercase;
  font-weight: bold;
  font-size: 18px;
  vertical-align: middle;
}

.main-nav li:hover {
  padding-bottom: 2px;
  border-bottom: 3px solid #F5A503;
  color: #F5A503;
}

.main-nav li a:hover {
  color: #F5A503;
}

.nav-home {
  margin: 0.5em 1em;
}

.nav-home a {
  font-size: 34px;
}
.nav-home a:hover {
  font-size: 34px;
  color: #F5A503;
}

/* Footer */
footer {
  width: 100%;
  height: 80px;
  background-color: #36B1BF;
  font-size: 14px;
  color: #F5F2E9;
  position:absolute;
  bottom:0;
  left:0;
}

.credit {
  display: inline-block;
  width: 70%;
  padding-top: 2em;
  padding-left: 2em;
}

.support {
  display: inline-block;
  width: 20%;
  list-style-type: none;
  right: 0;
  padding-top: 2em;
}

.support > li {
  display: inline-block;
}

/* Homepage */
.signup-container {
  padding: 1em 3em 1em 1.9em;
  border-right: 1px solid #ddd;
}
.signin-container {
  padding: 1em 1.7em 1em 3em;
}
.signin-container,
.signup-container {
  min-width: 35%;
  display: inline-block;
  margin: 1em auto;
  padding-top: 1.5em;
  vertical-align: top;
  text-align: left;
}
.signin-container > h2,
.signup-container > h2 {
  background-color: transparent;
  padding-bottom: 0.4em;
  padding: 0;
  margin: 0;
  text-transform: none;
  color: #000;
}

.form-group {
  min-width: 300px;
}
.signin-container label,
.signup-container label {
  font-size: 1em;
  font-weight: 500;
}
.signin-container input,
.signup-container input {
  display: inline-block;
  width: 300px;
  background-color: #F5F2E9;
  margin: 0.2em auto;
  padding: 0.4em;
  border: 1px solid #ccc;
  border-radius: 3px;
  line-height: 150%;
}

.signin-container input[type="submit"],
.signup-container input[type="submit"] {
  background-color: #F5A503;
  border: 1px solid #F5A503;
  color: #F5F2E9;
  margin-top: 0.5em;
  padding: 0.5em;
  width: 316px;
}

.signin-container input[type="submit"]:hover,
.signup-container input[type="submit"]:hover {
  background-color: #36B1BF;
  border: 1px solid #36B1BF;
  color: #F5F2E9;
}

.btn-fb-signin {
  display: block;
  width: 300px;
  background-color: #3A5795;
  margin: 2em auto;
  padding: 6px 8px;
  border: 1px solid #3A5795;
  border-radius: 3px;
  color: #fff;
  text-align: center;
  line-height: 150%;
}

.btn-fb-text {
  display: inline-block;
  vertical-align: 0.3em;
}

.btn-fb-logo {
  display: inline-block;
}

/* Update Profile & Moments */
.edit-moments,
.edit-profile-photo{
  max-width: 92%;
  margin: 0.2em auto;
  text-align: center;
}

.moments-container ul {
  margin: 0 auto;
  text-align: center;
}

.moments-container > li {
  display: inline-block;
  margin: 1em 0.3em;
  padding: 0.7em 0.7em 0.5em 0.7em;
  background-color: #F5F2E9;
  -webkit-box-shadow: 3px 3px 10px 1px rgba(153,153,153,0.65);
  -moz-box-shadow: 3px 3px 10px 1px rgba(153,153,153,0.65);
  box-shadow: 3px 3px 10px 1px rgba(153,153,153,0.65);
}
.moments-container > li > a {
  padding: 0.5em;
  text-align: center;
  text-transform: uppercase;
  font-family: 'Permanent Marker', cursive;
  color: #000;
  vertical-align: text-bottom;
}
.moments-container > li > img,
.moments-container > li > a {
  display: block;
}
.dropzone {
  background-color: #F5F2E9;
  border: 1px solid #ccc;
  border-radius: 3px;
  margin: 1.5em auto;
  margin-bottom: 3em;
  width: 90%;
  font-weight: 600;
}
.form-dob {
  display: block;
}
.edit-form {
  max-width: 60%;
  margin: 1.5em auto;
  padding-bottom: 2em;
  text-align: left;
}

/* Discover Moments */

#not_like,
#like {
  width: 160px;
  height: 70px;
  background-color: #F5A503;
  border: 1px solid #F5A503;
  margin: 2em 0.5em;
  padding: 0.5em;
  color: #F5F2E9;
  text-transform: uppercase;
  font-weight: 600;
  border-radius: 3px;
  outline: none;
}

#not_like:hover,
#like:hover {
  background-color: #36B1BF;
  border: 1px solid #36B1BF;
  color: #F5F2E9;
}

#user_moment {
  width: 550px;
  height: 100%;
  padding: 1.5em 0.7em 2em 0.7em;
  background-color: #F5F2E9;
  margin: 0 auto;
  margin-top: 2em;
  -webkit-box-shadow: 3px 3px 10px 1px rgba(153,153,153,0.65);
  -moz-box-shadow: 3px 3px 10px 1px rgba(153,153,153,0.65);
  box-shadow: 3px 3px 10px 1px rgba(153,153,153,0.65);
}

.moment-name-discover {
  font-family: 'Permanent Marker', cursive;
  font-size: 40px;
  margin-top: 20px;
}

.skip-left {
   transform: translateX(-1800px) rotate(-75deg);
   transition:all linear 1s;
}

.skip-right {
  transform: translateX(1800px) rotate(75deg);
  transition:all linear 1s;
}

/* Matches */
.match-box {
  background-color: #fff;
  padding: 0.3em 4em 0.3em 4em;
  margin: 1.5em;
  text-align: left;
}

.matches-container h3 {
  margin: 1.5em 0em;
  padding-bottom: 0em;
  border-bottom: 2px solid #000;
  text-transform: uppercase;
  font-size: 24px;
  text-align: left;
}

.matches-container {
  width: 100%;
  height: 100%;
  position: relative;
  background-color: #fff;
  margin: 2em auto;
  padding: 0 0 2em 0;
  border-radius: 3px;
}

#match_userprofile_pic {
  display: inline-block;
}

.match-content{
  display: inline-block;
  font-size: 20px;
  padding: 0.5em 2em;
  vertical-align: top;
}

/*.match-btn {
  display: block; 
}*/

/*.start-conversation {
  display: inline-block;
}
*/
.match-btn,
.start-conversation {
  background-color: #F5A503;
  display: inline-block;
  width: 170px;
  padding: 0.5em;
  border: 1px solid #F5A503;
  border-radius: 3px;
  color: #F5F2E9;
  text-transform: uppercase;
  font-weight: 600;
  text-align: center;
  vertical-align: top;
}


.start-conversation {
  margin-left: 1.5em;
}
.match-btn {
  margin-top: 1em;
  margin-right: 0.5em;
  margin-left: 0em;
}
.match-btn:hover,
.start-conversation:hover {
  background-color: #36B1BF;
  border: 1px solid #36B1BF;
  color: #F5F2E9;
}

#match_date {
  display: block;
}

/* View Profile */
.profile p {
  margin: 0.5em 3em;
  font-size: 20px;
}

.profile-details {
  display: inline-block;
  width: 50%;
  vertical-align: top;
  padding-top: 1.8em;
  margin-bottom: 1.5em;
}

.profile-label {
  font-weight: 700;
  text-transform: uppercase;
  border-bottom: 2px solid #000;
  margin-right: 0.3em;
}

.profile-photo {
  display: inline-block;
  width: 45%;
  vertical-align: top;
  padding-top: 2em;
}

.about-profile {
  width: 80%;
  margin-left: 2em;
}

.profile img {
  display: inline-block;
  margin: 4em 0.3em;
  padding: 0.7em 0.7em 3em 0.7em;
  background-color: #F5F2E9;
  -webkit-box-shadow: 3px 3px 10px 1px rgba(153,153,153,0.65);
  -moz-box-shadow: 3px 3px 10px 1px rgba(153,153,153,0.65);
  box-shadow: 3px 3px 10px 1px rgba(153,153,153,0.65);
}

/* Messages */
.message-thread {
  margin: 1em 1.5em;
}

.message-thread img {
  padding-left: 2.5em;
}

/* Chat */

.chatbox {
  overflow: hidden;
}

.chatboxhead {
  background-color: #F2385A;
  color: #F5F2E9;
  padding: 0.5em;
  overflow: hidden;
  border-right: 1px solid #F2385A;
  border-left: 1px solid #F2385A;
}

.chatboxcontent {
  background-color: #F5F2E9;
}

